[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/labscreenmonitor.png" type="Texture" id=1]
[ext_resource path="res://World/green_widescreen.png" type="Texture" id=2]
[ext_resource path="res://World/GreenWideScreenComp.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 17.5 )

[node name="GreenWideScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -34, -39 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 34, -39 )
texture = ExtResource( 1 )
flip_h = true

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.721569 )
position = Vector2( -38.75, -39 )
scale = Vector2( 0.902062, 1 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.701961 )
position = Vector2( 41.75, -39 )
scale = Vector2( 0.840206, 1 )
texture = ExtResource( 1 )
flip_h = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 0, -2.5 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
